[package]
name = "advent2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
itertools = "0.12.0"
rangemap = "1.4.0"
rayon = "1.8.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
winnow = "0.5.25"
